welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:4: error: ';' expected but ')' found.
  return (m - 10 >= 90) && (m + 10 <= 110)) ||
                                          ^